--- a/CsvToJson/src/CsvToJson/CsvToJson.csproj
+++ b/CsvToJson/src/CsvToJson/CsvToJson.csproj
@@ -13,6 +13,9 @@
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.APIGatewayEvents" Version="2.7.1" />
     <PackageReference Include="Amazon.Lambda.Core" Version="2.5.0" />
+    <PackageReference Include="Amazon.Lambda.S3Events" Version="3.1.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.4.4" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.410.7" />
+    <PackageReference Include="CsvHelper" Version="33.0.1" />
   </ItemGroup>
 </Project>
